WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35873
[Qt] New API scrollRecursively has several problems.
https://bugs.webkit.org/show_bug.cgi?id=35873
Summary
[Qt] New API scrollRecursively has several problems.
Joseph Ligman
Reported
2010-03-08 10:52:18 PST
The proposed scrollRecursively API has the following issues. 1.) Dependency on last mouse move position is error prone 2.) The name is confusing 3.) The documentation doesn't say what the return values signifies 4.) The test case doesn't test the negative scrolling case.
Attachments
Proposed patch.
(9.45 KB, patch)
2010-03-08 11:17 PST
,
Joseph Ligman
no flags
Details
Formatted Diff
Diff
Proposed patch
(11.30 KB, patch)
2010-03-16 14:23 PDT
,
Joseph Ligman
no flags
Details
Formatted Diff
Diff
Bug 35873 patch
(11.70 KB, patch)
2010-03-18 09:49 PDT
,
Joseph Ligman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Ligman
Comment 1
2010-03-08 11:17:31 PST
Created
attachment 50236
[details]
Proposed patch. Proposed patch attempting to address some of the issues with the new Qt 4.7 ScrollRecursively API
Laszlo Gombos
Comment 2
2010-03-15 10:28:24 PDT
Comment on
attachment 50236
[details]
Proposed patch.
> +void QWebFrame::scrollFrameWithParent(int dx, int dy, const QPoint& overflowHitTestPos) > +{ > + if (!d->scrollOverflow(dx, dy, overflowHitTestPos)) {
I would change the name of the variable in the signature to pos instead of overflowHitTestPos.
Joseph Ligman
Comment 3
2010-03-16 14:23:59 PDT
Created
attachment 50838
[details]
Proposed patch This patch would remove the scrollRecursively method from the API and make it an internal method only.
Joseph Ligman
Comment 4
2010-03-16 14:48:51 PDT
(In reply to
comment #3
)
> Created an attachment (id=50838) [details] > Proposed patch > > This patch would remove the scrollRecursively method from the API and make it > an internal method only.
I will post another patch to remove the test case from tst_qwebframe.cpp and the call to sendScrollEvent.
Joseph Ligman
Comment 5
2010-03-18 09:49:48 PDT
Created
attachment 51038
[details]
Bug 35873
patch Since there was no response on the mailing list regarding this API it seems like there is no interest or reason to keep it for Qt 4.7. I propose to remove it from the publick API and make it an internal qt_unstable API for now.
WebKit Commit Bot
Comment 6
2010-03-18 21:51:40 PDT
Comment on
attachment 51038
[details]
Bug 35873
patch Clearing flags on attachment: 51038 Committed
r56208
: <
http://trac.webkit.org/changeset/56208
>
WebKit Commit Bot
Comment 7
2010-03-18 21:51:45 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 8
2010-03-25 08:49:34 PDT
Cherry-picked into qtwebkit-4.6 with commit 70ed003c946ad2fe327c08999a72375f2df98ca6 and 8b75e509d033d2df08b0fd0c80a5941cc7083731
Laszlo Gombos
Comment 9
2010-03-30 09:12:39 PDT
Would it make sense to keep the test case for this (internal) api around ?
Kenneth Rohde Christiansen
Comment 10
2010-03-30 10:24:54 PDT
(In reply to
comment #9
)
> Would it make sense to keep the test case for this (internal) api around ?
I would think so
Joseph Ligman
Comment 11
2010-04-09 11:08:36 PDT
Laszlo, can we close this bug? ScrollRecursively is no longer part of the API.
https://bugs.webkit.org/show_bug.cgi?id=36674
addresses some issues for the internal scroll recursively method so any comments can be resolved over there.
Antonio Gomes
Comment 12
2010-07-25 21:37:09 PDT
(In reply to
comment #11
)
> Laszlo, can we close this bug? ScrollRecursively is no longer part of the API.
Well, bug description says the following issues:
>The proposed scrollRecursively API has the following issues. >1.) Dependency on last mouse move position is error prone
That seems fixed, since POS is passed as parameter.
> 2.) The name is confusing > 3.) The documentation doesn't say what the return values signifies
bug 40569
seems about these two issues, right?
> 4.) The test case doesn't test the negative scrolling case.
This should be easily fixable. If you want to close this one, please file follow up bugs for the missing bits, and link them here for the record.
Antonio Gomes
Comment 13
2010-07-25 21:41:48 PDT
Main point for me are: * is any one working on this? If not, I can ... * why these method bodies are not using EventHandler::scrollRecursively which should work for any overflowed content, incluing inner frames and block elements (e.g. div)?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug